# area

./: .gitignore  CMakeLists.txt  README.md
include/: analysis.h  parser.h  polygon.h  utils.h
src/: analysis.cpp  main.cpp  parser.cpp  polygon.cpp
test/: test_1.txt  test_10.txt  test_1_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
